# learning

./: .repos-cli.toml  README.md  how_to_clone_projects.md
algo_lib_rs/: Cargo.toml
algo_lib_rs/src/: lib.rs  linked_list.rs  node.rs
cocktails-api/: .gitignore  README.md  example.env  jest.config.js  package-lock.json  package.json
cocktails-api/prisma/: schema.prisma
cocktails-api/src/: index.ts  router.ts  server.ts
cocktails-api/src/handlers/: cocktail.ts  ingredient.ts  user.ts
cocktails-api/src/modules/: auth.ts  middleware.ts  types.ts  upload.ts
cocktails-api/tests/: setup.ts
cocktails-api/tests/fixtures/: cocktails.ts  ingredients.ts  users.ts
cocktails-api/tests/integration/: auth.test.ts  cocktail.test.ts  cocktailIngredient.test.ts  ingredient.test.ts
cocktails-api/tests/unit/: auth.test.ts
compression/: README.md
compression/arithmetic_coder/: CMakeLists.txt  README.md
compression/entropy_analyzer/: CMakeLists.txt  main.cpp
compression/image_predictor_analyzer/: README.md
dir__compression/arithmetic_coder/: main.cpp
dir__compression/entropy_analyzer/: README.md
dir__compression/universal_codes_lzw/: CMakeLists.txt  README.md  main.cpp
dir_compression/image_predictor_analyzer/: CMakeLists.txt  main.cpp
dir_cybersecurity/: README.md  format_string_vul.c
dir_cybersecurity/dir_cryptography/: crackingCipherText.ipynb
dir_cybersecurity/fisml/: .gitignore  Cargo.toml  README.md
dir_cybersecurity/fisml/src/: baseline.rs  cli.rs  config.rs  errors.rs  hashing.rs  lib.rs  logchain.rs  main.rs  metrics.rs  model.rs  secrets.rs  signing.rs  store.rs  watcher.rs
dir_cybersecurity/fisml/tests/: chain.rs  deletion.rs  signing.rs
dir_ml/: .gitignore  README.md
dir_ml/15_puzzle_bot/: CMakeLists.txt  README.md  main.cpp
dir_ml/dbscan/: dbscan.py  text
dir_ml/digits_recognizer/: digitsRecognizer.ipynb
dir_ml/k_means/: k_means.py
dir_ml/k_means_img_compression/: k_mean.ipynb
dir_ml/tic_tac_toe_4x4_server_bot/: README.md  minimax_player.cpp
dir_ml/tic_tac_toe_4x4_server_bot/server/: CMakeLists.txt  board.hpp  game_client.cpp  game_random_bot.cpp  game_server.cpp
dir_ml/visualize_cnn/: main.ipynb
ecommerce_project/ecommerce_api/: .env  .env.test  app.js  package-lock.json  package.json  server.js
ecommerce_project/ecommerce_api/config/: db.config.js
ecommerce_project/ecommerce_api/controllers/: authController.js  productController.js  reviewController.js  userController.js
ecommerce_project/ecommerce_api/middleware/: auth.js  validate.js
ecommerce_project/ecommerce_api/models/: Product.js  Review.js  User.js  index.js
ecommerce_project/ecommerce_api/routes/: authRoutes.js  productRoutes.js  reviewRoutes.js  (+1 more)
ecommerce_project/ecommerce_frontend/: .env  package-lock.json  package.json  vite.config.js
go-custom-load-balancer/: .gitignore  README.md  go.mod  main.go
go-custom-load-balancer/backend/: backend.go  backend_test.go
go-custom-load-balancer/balancer/: balancer.go  balancer_test.go  leastconn.go  roundrobin.go
go-custom-load-balancer/demo/: backend_server.go
go-custom-load-balancer/health/: checker.go
go-custom-load-balancer/pool/: pool.go
go-custom-load-balancer/proxy/: proxy.go
hs_pars_interpret_whilelan/: LICENSE
py_jp/: .gitignore  README.md  setup.py
py_jp/Python_jp/: __init__.py  cli.py  exceptions.py  keywords.py  preprocessor.py  runner.py  translator.py  utils.py
py_jp/examples/: hello_world.jppy  test.jppy
slice_orch/: .clippy.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs
slice_orch/benches/: allocator_bench.rs
slice_orch/configs/: default.yaml  dev.yaml
slice_orch/examples/: create_slice.rs  stream_telemetry.rs
slice_orch/migrations/: 0001_init.sql
slice_orch/policies/examples/: fairness.policy  isolation_guard.policy  latency_priority.policy
slice_orch/proto/: policy.proto  slice.proto  telemetry.proto
slice_orch/scripts/: dev_run.sh  generate_proto.sh  load_test.sh
slice_orch/src/: lib.rs  main.rs  types.rs
slice_orch/src/api/: grpc.rs  mod.rs  rest.rs
slice_orch/src/config/: loader.rs  mod.rs  model.rs
slice_orch/src/controller/: admission.rs  allocator.rs  mod.rs  policy_engine.rs  reconciler.rs
slice_orch/src/events/: bus.rs  kafka.rs  mod.rs  types.rs
slice_orch/src/policy/: dsl.rs  mod.rs  verifier.rs  wasm_host.rs
slice_orch/src/security/: auth.rs  mod.rs  mtls.rs  rbac.rs
slice_orch/src/solver/: constraint.rs  mod.rs  model.rs  optimizer.rs
slice_orch/src/startup/: mod.rs  wiring.rs
slice_orch/src/store/: cache.rs  etcd.rs  mod.rs  state.rs
slice_orch/src/telemetry/: ingest.rs  metrics.rs  mod.rs  model.rs  tracing.rs
slice_orch/tests/: allocator_capacity.rs  integration_endpoints.rs  integration_slice_lifecycle.rs  policy_negative.rs  policy_verification.rs  telemetry_ingest.rs
sol_png_secret_mess/: README.md  foundry.toml
sol_png_secret_mess/script/: PngTool.s.sol
sol_png_secret_mess/src/: PngLib.sol
sol_png_secret_mess/test/: PngLib.t.sol
stereorepo_cli/: Cargo.toml
stereorepo_cli/src/: main.rs
webserver_cache_rdma/: .dockerignore  .repos-cli.toml  CMakeLists.txt  Dockerfile  README.md
webserver_cache_rdma/src/cpp/: main.cpp  server.cpp  session.cpp  signals.cpp
webserver_cache_rdma/src/cpp/cache/: lru_cache.cpp
webserver_cache_rdma/src/cpp/fs/: file_reader.cpp  path_utils.cpp
webserver_cache_rdma/src/cpp/http/: mime.cpp  parser.cpp  request.cpp
webserver_cache_rdma/src/cpp/rdma/: connection.cpp  protocol.cpp  rdma_server.cpp
webserver_cache_rdma/src/cpp/util/: config.cpp  logging.cpp  metrics.cpp  time.cpp
webserver_cache_rdma/src/headers/: server.hpp  session.hpp  signals.hpp
webserver_cache_rdma/src/headers/cache/: lru_cache.hpp
webserver_cache_rdma/src/headers/fs/: file_reader.hpp  path_utils.hpp
webserver_cache_rdma/src/headers/http/: headers.hpp  mime.hpp  parser.hpp  request.hpp  response.hpp
webserver_cache_rdma/src/headers/rdma/: connection.hpp  protocol.hpp  rdma_server.hpp
webserver_cache_rdma/src/headers/util/: config.hpp  logging.hpp  metrics.hpp  time.hpp
(+29 files in other folders)
