[package]
name = "slice-orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://example.com/placeholder"
description = "5G network slice orchestrator control plane (skeleton)"

[package.metadata]
# Placeholder metadata

[features]
# Expand feature definitions to pull in concrete crates.
default = ["rest", "grpc", "otel"]
rest = []
grpc = ["tonic", "prost"]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
kafka = ["rdkafka"]
wasm = ["wasmtime"]
verify = ["z3"]
bench = []

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
opentelemetry = { version = "0.24", optional = true, features=["trace","metrics"] }
opentelemetry_sdk = { version = "0.24", optional = true, features=["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", optional = true, features=["grpc-tonic"] }
tracing-opentelemetry = { version = "0.25", optional = true }
axum = { version = "0.7" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tonic = { version = "0.12", optional = true, features=["transport"] }
prost = { version = "0.13", optional = true }
rdkafka = { version = "0.36", optional = true, features=["tokio"] }
wasmtime = { version = "20", optional = true }
z3 = { version = "0.12", optional = true }
async-trait = "0.1"
dashmap = "5"
once_cell = "1"
regex = "1"
parking_lot = "0.12"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5" }
reqwest = { version = "0.12", features=["json"] }
serde = { version = "1", features=["derive"] }
 tokio-test = "0.4"
serial_test = "3"

[[bench]]
name = "allocator_bench"
harness = false
required-features = ["bench"]

[build-dependencies]
tonic-build = { version = "0.12" }
prost-build = { version = "0.13" }
protoc-bin-vendored = "3"

[patch.crates-io]
# (Placeholder for internal forks if needed)
