[package]
name = "r"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fisml"
path = "src/main.rs"

[dependencies]
blake3 = { version = "1.5", optional = true }
anyhow = "1.0"
aho-corasick = "1.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
ignore = "0.4"
notify = "6.1"
parking_lot = "0.12"
rand = "0.8"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
prometheus = "0.13"
globset = "0.4"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
fast-hash = ["blake3"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
